--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MULTIPLICATION APPLICATION</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <p id="score">score: <span id="scoreval">0</span></p>
+      <span id="question">what is 2 multiply by 3?</span>
+      <input required placeholder="Enter your answer" type="text" id="ans" />
+      <button type="submit" id="enter" onclick="check()">Submit</button>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
